--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button {
 	background-color: #8B8C9D;
 }
 select {
-	background-color: #4CAF50; /* grey */
+	background-color: white; /* grey */
 	border: none;
 	text-align: center;
 	width: 55%;
@@ -63,6 +63,6 @@ select {
 	font-size: 40px;
 	display: inline-block;
 	text-decoration: none;
-	color: white;
+
 	margin: 5% 5% 5% 5%;
 }
