--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button {
 }
 #menu {
 	height: 15%;
-	position: fixed;
+	position: sticky;
 	width: 100%; 
 	bottom: 0px;
 	background-color: #8B8C9D;
