--- a/style.css
+++ b/style.css
@@ -55,10 +55,11 @@ button {
 	padding: 0px;
 }
 #menu {
+	overflow: hidden;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
 	height: 15%;
-	position: sticky;
-	width: 100%; 
-	bottom: 0px;
 	background-color: #8B8C9D;
 }
 select {
