--- a/style.css
+++ b/style.css
@@ -46,14 +46,19 @@ button {
 .nomDeJoueur {
 	font-size: 90px;
 	height: 20%;
-	border-top-style: solid;
+	
 	border-bottom-style: hidden; 
 	padding: 3% 0% 3% 0%;
 }
 #listeDesJoueur{
 	list-style-type: none;
 	padding: 0px;
+
 }
+li{
+	border-top-style: solid;
+}
+
 #menu {
 	overflow: hidden;
 	position: fixed;
@@ -99,5 +104,15 @@ h1 {
     display: block;
     margin-top: 11.5%;
     height: 50%;
+
+}
+#fermer {
+	background: url(croix.png);
+	background-size: 100%;
+	height: 70px;  
+    width: 70px;
+    right: 2%;
+    margin-top: 2%;
+    position: absolute;
 
 }
