--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ button {
 	height: 20%;
 	border-bottom-style: hidden; 
 	padding: 3% 0% 3% 0%;
+	display: inline-block;
+	margin: auto;
+	width: 80%;
 }
 #listeDesJoueur{
 	list-style-type: none;
@@ -57,7 +60,7 @@ button {
 ul{
 	overflow:hidden;
 	overflow-y:scroll;
-	max-height: 91%;
+	max-height: 90.5%;
 
 }
 li{
@@ -118,7 +121,6 @@ h1 {
 	height: 65px;  
     width: 65px;
     left: 90.6%;
-    margin-top: 2%;
     position: relative;
 
 
